--- a/InputshareLibWindows/InputshareLibWindows.csproj
+++ b/InputshareLibWindows/InputshareLibWindows.csproj
@@ -10,7 +10,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x86'">
-    <OutputPath>../builds/release32</OutputPath>
+    <OutputPath>../builds/debug32</OutputPath>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x86'">
@@ -18,11 +18,11 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <OutputPath>..\release64</OutputPath>
+    <OutputPath>..\builds\release64</OutputPath>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <OutputPath>..\debug64</OutputPath>
+    <OutputPath>..\builds\debug64</OutputPath>
   </PropertyGroup>
 
   <ItemGroup>
