--- a/InputshareWindows/InputshareWindows.csproj
+++ b/InputshareWindows/InputshareWindows.csproj
@@ -3,7 +3,14 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.0</TargetFramework>
-    <Platforms>AnyCPU;x64;x86</Platforms>
+    <Platforms>AnyCPU;x64;x86</Platforms>    
+
+    <Version>1.0.1</Version>
+    <Authors>Sam Barraclough</Authors>
+    <Company>Sbarrac1</Company>
+    <Product>Inputshare</Product>
+    <PackageProjectUrl>https://github.com/sbarrac1/Inputshare</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/sbarrac1/Inputshare</RepositoryUrl>
 
   </PropertyGroup>
 
